--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "nigah": "0.0.2",
     "precommit-hook": "^1.0.7",
     "prompt": "^0.2.14",
-    "telerivet": "git+ssh://git@github.com:jksdua/telerivet-node-client#7e32855f0c962c0d059e395b05f39e3a23526d8f",
+    "telerivet": "^1.1.0",
     "uuid": "^1.4.1"
   }
 }
